# icansmell

./: .gitignore  README.md  pyproject.toml  sniffsniff-6.toml  sniffsniff-manual.toml  sniffsniff.toml
docs/: TECHNICAL.md
docs/superpowers/specs/: 2026-07-05-sniffsniff-foundation-design.md  2026-07-05-sniffsniff-m2-smell-map-design.md  2026-07-06-sniffsniff-m3-llm-reasoner.md  2026-07-06-sniffsniff-tui-design.md  2026-07-06-sniffsniff-tui-v2-guided-training.md  2026-07-08-dual-uno-9-sensor-design.md  2026-07-08-tui-dashboard-redesign-design.md
firmware/sniffsniff_uno/: sniffsniff_uno.ino
firmware/sniffsniff_uno_b/: sniffsniff_uno_b.ino
src/sniffsniff/: __init__.py  calibrate.py  capture.py  cli.py  config.py  dataset.py  features.py  geometry.py  llm.py  model.py  monitor.py  reason.py  record.py  recovery.py  serialio.py  servo.py  simulator.py  smellmap.py
src/sniffsniff/tui/: __init__.py  app.py  controller.py  nose.py  widgets.py
tests/: test_calibrate.py  test_capture.py  test_cli_m2.py  test_cli_reason.py  test_cli_tui.py  test_config.py  test_dataset.py  test_end_to_end.py  test_features.py  test_geometry.py  test_llm.py  test_model.py  test_monitor.py  test_reason.py  test_record.py  test_record_dataset_ops.py  test_recovery.py  test_serialio.py  test_servo.py  test_simulator.py  test_smellmap.py  test_tui_app.py  test_tui_controller.py  test_tui_fixes.py  test_tui_nose.py  test_tui_widgets.py
tests/data/: milk_exposure.npz
