[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sniffsniff"
version = "0.1.0"
description = "LLM-reasoning electronic nose — 6-sensor MQ array on Arduino Uno (Foundation milestone)"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pyserial>=3.5"]

[project.scripts]
sniffsniff = "sniffsniff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
