[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sniffsniff"
version = "0.1.0"
description = "LLM-reasoning electronic nose — 6-sensor MQ array on Arduino Uno"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pyserial>=3.5", "scikit-learn>=1.4", "joblib>=1.3"]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
tui = ["textual>=0.60"]

[project.scripts]
sniffsniff = "sniffsniff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
